crates/ploke-tui/tests/snapshots/approvals_overlay_render__approvals_codeblocks_90x28.snap
---
source: crates/ploke-tui/tests/approvals_overlay_render.rs
assertion_line: 329
expression: red
---
┌ Approvals ─────────────────────────────────────────────────────────────────────────────┐
│┌ Pending Proposals ──────────────┐┌ Details ──────────────────────────────────────────┐│
││▶ [E] 87654321  Pending  files:1 ││request_id: <UUID>   ││
││                                 ││status: Pending  files:1                           ││
││                                 ││Before/After:                                      ││
││                                 ││--- <PWD>/crates/p││
││                                 ││loke-tui/Cargo.toml                                ││
││                                 ││- fn b() {}                                        ││
││                                 ││+ fn c() {}                                        ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
│└─────────────────────────────────┘└───────────────────────────────────────────────────┘│
│                     ? Help | View: unlimited | Filter: pending+errored | Diff: minimal │
└────────────────────────────────────────────────────────────────────────────────────────┘
