crates/ploke-tui/tests/snapshots/approvals_overlay_render__approvals_empty_60x20.snap
---
source: crates/ploke-tui/tests/approvals_overlay_render.rs
expression: red
---
┌ Approvals ───────────────────────────────────────────────┐
│┌ Pending Proposals ──┐┌ Details ────────────────────────┐│
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
│└─────────────────────┘└─────────────────────────────────┘│
│ ? Help | View: unlimited | Filter: pending+errored | Diff│
└──────────────────────────────────────────────────────────┘
