crates/ploke-tui/tests/snapshots/approvals_overlay_render__approvals_multiple_sel0_80x24.snap
---
source: crates/ploke-tui/tests/approvals_overlay_render.rs
expression: red1
---
┌ Approvals ───────────────────────────────────────────────────────────────────┐
│┌ Pending Proposals ──────────┐┌ Details ────────────────────────────────────┐│
││▶ [E] aaaaaaaa  Pending  file││request_id:                                  ││
││  [E] bbbbbbbb  Pending  file││<UUID>         ││
││                             ││status: Pending  files:1                     ││
││                             ││Unified Diff:                                ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
│└─────────────────────────────┘└─────────────────────────────────────────────┘│
│           ? Help | View: unlimited | Filter: pending+errored | Diff: minimal │
└──────────────────────────────────────────────────────────────────────────────┘
